k8s/author-api-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: author-api-depl
spec:
  replicas: 1
  # selecting a container from template
  selector:
    matchLabels:
      app: authorapiservice
  # defining a container
  template:
    metadata:
      labels:
        app: authorapiservice
    spec:
      containers:
        - name: authorapiservice
          image: __DOCKER_IMAGE__
---
apiVersion: v1
kind: Service
metadata:
  name: author-service
spec:
  type: ClusterIP
  selector:
    app: authorapiservice
  ports:
    - name: authorsrvpt
      protocol: TCP
      port: 80
      targetPort: 80
