k8s/comment-api-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-api-depl
spec:
  replicas: 1
  # selecting a container from template
  selector:
    matchLabels:
      app: commentapiservice
  # defining a container
  template:
    metadata:
      labels:
        app: commentapiservice
    spec:
      containers:
        - name: commentapiservice
          image: testcontainerregistrymyfirstrgb6bce5d44706469baf6b.azurecr.io/commentserviceimagerepo
---
apiVersion: v1
kind: Service
metadata:
  name: comment-service
spec:
  type: ClusterIP
  selector:
    app: commentapiservice
  ports:
    - name:  commentsrvpt
      protocol: TCP
      port: 80
      targetPort: 80
