k8s/comment-api-mysql-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-api-mysql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment-api-mysql
  template:
    metadata:
      labels:
        app: comment-api-mysql
    spec:
      containers:
        - name: comment-api-mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
              name: commentmysqlpt
---
apiVersion: v1
kind: Service
metadata:
  name: comment-api-mysql-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: comment-api-mysql
  ports:
    - name: commentmysqlpt
      protocol: TCP
      port: 3306
      targetPort: 3306

---
# apiVersion: v1
# kind: Service
# metadata:
#   name: comment-api-mysql-loadbalancer
# spec:
#   type: LoadBalancer
#   selector:
#     app: comment-api-mysql
#   ports:
#     - name: commentmysqlpt
#       protocol: TCP
#       port: 3306
#       targetPort: 3306
