k8s/ingress-srv-aks.yml
# https://kubernetes.github.io/ingress-nginx/deploy/#quick-start
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    # https://neos21.net/blog/2020/07/29-01.html
    nginx.ingress.kubernetes.io/rewrite-target: /$1$2
spec:
  rules:
    http:
      paths:
        - path: /author-service/(.*)
          pathType: Prefix
          backend:
            service:
              name: author-service
              port:
                number: 80
        - path: /book-service/(.*)
          pathType: Prefix
          backend:
            service:
              name: book-service
              port:
                number: 80
        - path: /comment-service/(.*)
          pathType: Prefix
          backend:
            service:
              name: comment-service
              port:
                number: 80
